added content, styling, js

--- a/summary.html
+++ b/summary.html
@@ -6,8 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Work</title>
     <link rel="stylesheet" href="CSS/summary.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!--Thinfont-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <div class="small-ball"></div>
+    <div class="js-ball"></div>
     <div class="slider-container">
       <div class="slider"></div>
     </div>
@@ -16,7 +31,7 @@
         <div class="main-card-content">
           <img
             class="profile-img"
-            src="media/images/Frame 141 (1).png"
+            src="media/images/IMG-20230820-WA0003.jpg"
             alt="A picture of amazing student"
           />
           <div>
@@ -35,50 +50,75 @@
     </div>
     <div class="row">
       <div class="card">
-        <h2>ZenQuoteMachine</h2>
-        <p>Typescript/react-project</p>
-        <a href="https://the-quote-machine.netlify.app/"
-          >https://the-quote-machine.netlify.app/</a
-        >
+        <h2>The Quote Machine</h2>
+        <p>
+          Typescript/react-project working with an api using Tan Stack Query.
+          First time working with typescript, which i really enjoyed and want to
+          do more.
+        </p>
+        <p>Co-creators: Magnus Vargvinter, Alfred Unenge</p>
+        <a href="https://the-quote-machine.netlify.app/">The Quote Machine</a>
+        <a href="https://github.com/jaken92/ZenQuoteMachine">Repo</a>
       </div>
       <div class="card">
-        <h2>ZenQuoteMachine</h2>
-        <p>Typescript/react-project</p>
-        <a href="https://the-quote-machine.netlify.app/"
-          >https://the-quote-machine.netlify.app/</a
-        >
+        <h2>Kino Koszyk</h2>
+        <p>
+          My first wordpress project. The website was made for the film/photo
+          group Kino Koszyk as part of a school project.
+        </p>
+        <p>Co-creators: Emma Hedlund, Magnus Vargvinter, Lucas</p>
+        <a href="https://emma-hedlund.se/Kinokoszyk/">Kino Koszyk</a>
+        <a href="https://github.com/hedlundemma/public">Repo</a>
       </div>
       <div class="card">
-        <h2>ZenQuoteMachine</h2>
-        <p>Typescript/react-project</p>
-        <a href="https://the-quote-machine.netlify.app/"
-          >https://the-quote-machine.netlify.app/</a
-        >
+        <h2>Hangman</h2>
+        <p>
+          Reactproject - getting familiar with react and some of its features
+          such as styled components and useEffect. We use an api to get the
+          words, so dont blame us if they are lame...
+        </p>
+        <p>Co-creators: Emma Hedlund</p>
+        <a href="https://dopest-hangman.netlify.app/">Hangman</a>
+        <a href="https://github.com/jaken92/hangman">Repo</a>
       </div>
     </div>
 
     <div class="row">
       <div class="card">
-        <h2>ZenQuoteMachine</h2>
-        <p>Typescript/react-project</p>
-        <a href="https://the-quote-machine.netlify.app/"
-          >https://the-quote-machine.netlify.app/</a
-        >
+        <h2>Waterworks</h2>
+        <p>
+          Visual presentation of api-data with CSS and JS. Hope you like water
+          data.
+        </p>
+        <p>Co-creators: Gustav Enoksson, Tobias Åhlund, Robin Persson</p>
+        <a href="https://waterworks-gbg.netlify.app/">Waterworks</a>
+        <a href="https://github.com/styrbjorn-n/Waterworks">Repo</a>
       </div>
       <div class="card">
-        <h2>ZenQuoteMachine</h2>
-        <p>Typescript/react-project</p>
-        <a href="https://the-quote-machine.netlify.app/"
-          >https://the-quote-machine.netlify.app/</a
-        >
+        <h2>Cheer you up!</h2>
+        <p>
+          Silly little page on the theme "useless-web". This was the very first
+          project i made with Javascript, a fun way to get familiar with the
+          language. The webpage has an audio so you may want to turn the volume
+          down a notch.
+        </p>
+        <a href="https://cheeryouup.netlify.app/">Cheer you up!</a>
+        <a href="https://github.com/jaken92/The-Useless-Web">Repo</a>
       </div>
       <div class="card">
-        <h2>ZenQuoteMachine</h2>
-        <p>Typescript/react-project</p>
-        <a href="https://the-quote-machine.netlify.app/"
-          >https://the-quote-machine.netlify.app/</a
-        >
+        <h2>The Very Average Island Inn</h2>
+        <p>
+          We were tasked with making a virtual hotel over our christmasbreak.
+          The hotel needed to be equiped with a booking system, display booked
+          dates clearly and make calls to an API upon bookings to update the
+          balance of the hotels account. Utilizing php, SQLite and benhall
+          calendar i was able to achieve this. The potato styling is embarassing
+          but this was not the focus of this assignment.
+        </p>
+        <a href="https://petterjakobsson.se/">The Very Avarage Island Inn</a>
+        <a href="https://github.com/jaken92/hotel">Repo</a>
       </div>
     </div>
   </body>
+  <script src="JavaScript/summary.js"></script>
 </html>
