made it more responsive
css updated

--- a/index.html
+++ b/index.html
@@ -35,15 +35,20 @@
             alt="A picture of amazing student"
           />
           <div>
-            <h2>Petter Jakobsson</h2>
+            <h1>Petter Jakobsson</h1>
             <p>
               Webdevelopment student of the 22' class of Yrgo. Currently looking
-              for internship November 2023 - June 2024.
+              for an internship November 2023 - June 2024. I look forward to
+              future challenges and I´m always eager to learn new things. If you
+              think that i could be a good match for your company/workplace I
+              would be very happy to get in touch with you!
             </p>
             <p>
-              Skills: Javascript, React, Typescript, Php, Laravel and Wordpress.
+              Skills: Javascript, React, Typescript, Node, Php, Laravel and
+              Wordpress.
             </p>
-            <a href="https://the-quote-machine.netlify.app/">My Github</a>
+            <p>Contact: Jaaakeeen@gmail.com or +46735876724</p>
+            <a href="https://github.com/jaken92">My Github</a>
           </div>
         </div>
       </div>
@@ -53,7 +58,7 @@
         <h2>The Quote Machine</h2>
         <p>
           Typescript/react-project working with an api using Tan Stack Query.
-          First time working with typescript, which i really enjoyed and want to
+          First time working with typescript, which I really enjoyed and want to
           do more.
         </p>
         <p>Co-creators: Magnus Vargvinter, Alfred Unenge</p>
